--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -1,5 +1,6 @@
+$white: rgb(223, 219, 219);
 $highlight:#3B3A3A ;
-	$highlight-shadow: rgba(#7dd6c2, 0.59);
+$highlight-shadow: hsla(0, 0%, 10%, 0.47);
 $lowLight: rgba(1, 1, 1, 0.28);
 $brown: rgb(195, 186, 109);
 
