--- a/public/html/views/contact.html
+++ b/public/html/views/contact.html
@@ -24,7 +24,7 @@
         </li>
       </ul>
     </section>
-    <hr/>
+    <div class="bar"></div>
   </div>
   <div id="message">
     <header>
@@ -38,14 +38,15 @@
         </section>
         <section>
           <h3>Email</h3>
-          <input type="text" name="Email" value=""/>
+          <input type="text" name="Email"/>
         </section>
         <section>
           <h3>Message</h3>
-          <input type="text" name="Message" value="" id="bigBox"/>
+          <textarea name="Message" rows="8" cols="40" id="bigBox"></textarea>
         </section>
         <input type="submit" name="submit" value="Submit"/>
       </form>
     </section>
+    <div class="bar"></div>
   </div>
 </div>
