--- a/public/css/master.css
+++ b/public/css/master.css
@@ -161,14 +161,16 @@ header#mainHeader {
       justify-content: space-around; }
       header#mainHeader nav#mainNav ul li {
         text-align: center;
-        width: 10vw;
         font-size: .9em;
         line-height: 5vh;
         transition: all 140ms ease-in-out; }
         header#mainHeader nav#mainNav ul li a, header#mainHeader nav#mainNav ul li a:visited {
           color: white;
-          text-decoration: none; }
-      header#mainHeader nav#mainNav ul li.active {
+          text-decoration: none;
+          padding-bottom: 1.3vh;
+          padding: 1.3vh 2vw;
+          transition: all 0.222s ease-in-out; }
+      header#mainHeader nav#mainNav ul a.active {
         background-color: #3B3A3A;
         border: solid rgba(1, 1, 1, 0.28) 1px;
         border-bottom: none;
