--- a/public/index.pug
+++ b/public/index.pug
@@ -13,14 +13,14 @@ html(lang='en', ng-app="app")
 				span(ng-click="makePost()") n
 			nav#mainNav
 				ul
-					li#home.active
-						a(ui-sref='/home', title="home") Home
-					li#about
-						a(ui-sref="/about", title="about") About
-					li#proj
-						a(ui-sref="/projects", title="projects") Projects
-					li#contact
-						a(ui-sref="/contact", title="contact") Contact
+					li
+						a(ui-sref='/home', title="home")#home.active Home
+					li
+						a(ui-sref="/about", title="about")#about About
+					li
+						a(ui-sref="/projects", title="projects")#proj Projects
+					li
+						a(ui-sref="/contact", title="contact")#contact Contact
 
 
 
