--- a/public/index.pug
+++ b/public/index.pug
@@ -6,7 +6,7 @@ html(lang='en', ng-app="app")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel='stylesheet', href='./css/master.css')
 		link(href="https://fonts.googleapis.com/css?family=Bungee+Outline", rel="stylesheet")
-
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
 	body(ng-controller="ctrl")
 		header#mainHeader
 			h1 Climbing the Mountai
