--- a/public/css/master.css
+++ b/public/css/master.css
@@ -87,7 +87,7 @@
         margin: 0 auto;
         width: 92vw; }
       ui-view #home .post article p {
-        font-size: .9em;
+        font-size: 1em;
         line-height: 1.5em; }
     ui-view #home #aboutMe {
       width: 100vw; }
@@ -236,15 +236,16 @@ header#mainHeader {
   flex-direction: column;
   align-items: center; }
   header#mainHeader h1 {
-    font-family: 'Patrick Hand SC', cursive;
-    color: #3B3A3A;
+    font-family: 'Amatic SC', cursive;
+    color: white;
     height: 25vh;
     line-height: 25vh;
     font-size: 2.5em;
     width: 100vw;
-    text-align: center; }
+    text-align: center;
+    text-shadow: -2px 2px 1px rgba(1, 1, 1, 0.28); }
   header#mainHeader nav#mainNav {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     width: 100vw;
     height: 5vh;
     padding-bottom: 1vh;
@@ -298,7 +299,7 @@ ui-view {
       border-bottom: 2px black solid;
       margin-bottom: 10vh; }
       ui-view #home .post article p {
-        font-family: helvetica; }
+        font-family: 'Sintony', sans-serif; }
     ui-view #home #aboutMe header {
       cursor: pointer;
       margin-bottom: 3vh;
