Spread out and modified the scss import flow

--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -4,6 +4,11 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto+Condensed';
 @import '_queries.scss';
 @import '_trans.scss';
+@import '_home.scss';
+@import "_header.scss";
+@import "_contact.scss";
+@import "_proj.scss";
+@import "_about.scss";
 //fontbox
 //font-family: 'Roboto Condensed', sans-serif
 //font-family: 'Open Sans Condensed', sans-serif
@@ -12,266 +17,3 @@
 // font-family: 'Titillium Web', sans-serif;
 // font-family: 'Sintony', sans-serif;
 // font-family: 'Amatic SC', cursive;
-*{
-	box-sizing:border-box;
-}
-a, a:hover, a:visited{
-	color:black;
-	text-decoration:none;
-}
-
-
-html{
-	min-width:198px;
-}
-body{
-	min-width:198px;
-	background-color: $gray;
-}
-
-
-
-
-
-header#mainHeader{
-
-	width:100vw;
-	height:30vh;
-	background:$darkGray;
-	margin-bottom:5vh;
-	display:flex;
-	flex-direction: column;
-	align-items:center;
-	h1{
-		font-family: 'Amatic SC', cursive;
-		color:white;
-		// text-shadow:0px 0px 0 rgb(-27,-27,-27),-1px 1px 0 rgb(-31,-31,-31),-2px 2px 0 rgb(-34,-34,-34),-3px 3px 0 rgb(-38,-38,-38),-4px 4px 0 rgb(-41,-41,-41),-5px 5px 0 rgb(-44,-44,-44),-6px 6px 0 rgb(-48,-48,-48),-7px 7px 0 rgb(-51,-51,-51),-8px 8px 0 rgb(-55,-55,-55),-9px 9px 0 rgb(-58,-58,-58),-10px 10px 0 rgb(-61,-61,-61),-11px 11px 0 rgb(-65,-65,-65),-12px 12px 0 rgb(-68,-68,-68),-13px 13px 0 rgb(-72,-72,-72),-14px 14px 0 rgb(-75,-75,-75),-15px 15px 0 rgb(-78,-78,-78),-16px 16px 0 rgb(-82,-82,-82),-17px 17px 0 rgb(-85,-85,-85),-18px 18px 0 rgb(-89,-89,-89),-19px 19px 0 rgb(-92,-92,-92),-20px 20px 0 rgb(-95,-95,-95),-21px 21px 0 rgb(-99,-99,-99),-22px 22px 0 rgb(-102,-102,-102),-23px 23px 0 rgb(-106,-106,-106),-24px 24px 0 rgb(-109,-109,-109),-25px 25px 0 rgb(-112,-112,-112),-26px 26px 0 rgb(-116,-116,-116),-27px 27px 0 rgb(-119,-119,-119),-28px 28px 0 rgb(-123,-123,-123),-29px 29px 0 rgb(-126,-126,-126),-30px 30px 0 rgb(-129,-129,-129),-31px 31px 0 rgb(-133,-133,-133),-32px 32px 0 rgb(-136,-136,-136),-33px 33px 0 rgb(-140,-140,-140),-34px 34px 0 rgb(-143,-143,-143),-35px 35px 0 rgb(-146,-146,-146),-36px 36px 0 rgb(-150,-150,-150),-37px 37px 0 rgb(-153,-153,-153),-38px 38px 0 rgb(-157,-157,-157),-39px 39px 0 rgb(-160,-160,-160), -40px 40px 0 rgb(-163,-163,-163),-41px 41px 40px rgba(0,0,0,0.15),-41px 41px 1px rgba(0,0,0,0.5),0px 0px 40px rgba(0,0,0,.2);
-		height:25vh;
-		line-height:25vh;
-		font-size:2.5em;
-		width:100vw;
-		text-align:center;
-		text-shadow: -2px 2px 1px $lowLight;
-
-	}
-	nav#mainNav{
-		font-family: 'Titillium Web', sans-serif;
-		width:100vw;
-		height:5vh;
-		padding-bottom:1vh;
-		border-bottom:2px solid $highlight;
-		ul{
-			margin:0 auto;
-			height:5vh;
-			width:90vw;
-			display:flex;
-			justify-content:space-around;
-			li{
-				text-align:center;
-				font-size:.9em;
-				line-height:5vh;
-				transition: all 140ms ease-in-out;
-				a,a:visited{
-					color:white;
-					text-decoration:none;
-					padding-bottom:1.3vh;
-					padding:1.3vh 2vw;
-					transition:all 0.222s ease-in-out;
-				}
-			}
-			a.active{
-				background-color:$highlight;
-				border:solid $lowLight 1px;
-				border-bottom:none;
-				border-top-right-radius:1vw;
-			}
-		}
-	}
-}
-
-
-ui-view{
-	width:100vw;
-	#home{
-		width:100vw;
-		.container{
-			display:flex;
-			flex-direction:column-reverse;
-		}
-		.post{
-
-			header{
-				text-align:center;
-				h1{
-					font-family: 'Roboto Condensed', sans-serif;
-					margin-bottom:1vh;
-				}
-				font-family: 'Open Sans Condensed', sans-serif;
-				margin-bottom:3vh;
-			}
-			img{
-				border-radius:2vw;
-				border-bottom-left-radius: 0px;
-				box-shadow:-0.2vw 0.2vw 0.2vw $highlight-shadow;
-				border:1px $lowLight solid;
-				border-bottom:none;
-				border-left:none;
-			}
-			article{
-
-				p{
-					font-family: 'Sintony', sans-serif;
-				}
-				padding:3vh 0;
-				border-bottom: 2px black solid;
-				margin-bottom: 10vh;
-			}
-		}
-		#aboutMe{
-			header{
-				cursor:pointer;
-				margin-bottom:3vh;
-				padding:2vh 0;
-				border: solid 3px $highlight;
-				font-family: 'Roboto Condensed', sans-serif;
-			}
-			img{
-				border-radius:100%;
-				margin-bottom:3vh;
-			}
-			article{
-				a, a:visited{
-					corsor:pointer;
-					color:black;
-					p{
-						margin:0 auto;
-						//width assigned with queries
-						border:1px $highlight solid;
-						padding:0.3vw;
-					}
-				}
-				p{
-					font-family: helvetica;
-				}
-			}
-		}
-	}
-}
-#contactPage{
-	display:flex;
-	justify-content:space-around;
-	#deets{
-		position:relative;
-		.bar{
-			position: absolute;
-			bottom:-5vh;;
-			height:1vh;
-			background:$highlight-shadow;
-			clear:both;
-		}
-		background-color:$white;
-		border-top-right-radius:0.3vw;
-		border-top-left-radius:0.3vw;
-		border-bottom-right-radius:0.2vw;
-		box-shadow:0.2vw 0.2vw 0.25vw $highlight-shadow;
-		header{
-			display:flex;
-			align-items:center;
-			justify-content:space-around;
-			height:5vh;
-			background:$highlight;
-			border:solid $lowLight 2px;
-			text-align:center;
-			margin-bottom:3vh;
-			color:white;
-			border-top-right-radius:0.3vw;
-			border-top-left-radius:0.3vw;
-		}
-		section{
-			ul{
-				margin:0 auto;
-				display:flex;
-				flex-direction:column;
-				justify-content:space-around;
-				li{
-					margin-bottom:3vh;
-					h1{
-						margin-bottom:1vh;
-						color:$highlight;
-						text-shadow:-2px 2px 1px rgb(237, 237, 237);
-					}
-					h2{
-						padding-left:0.5vw;
-					}
-				}
-			}
-		}
-	}
-	#message{
-		box-shadow:0.2vw 0.2vw 0.25vw $highlight-shadow;
-		border-top-right-radius:0.3vw;
-		border-top-left-radius:0.3vw;
-		background-color:$white;
-		position: relative;
-		.bar{
-			position: absolute;
-			bottom:-5vh;;
-			height:1vh;
-			background:$highlight-shadow;
-			clear:both;
-		}
-		header{
-			border-top-right-radius:0.3vw;
-			border-top-left-radius:0.3vw;
-			display:flex;
-			align-items:center;
-			justify-content:space-around;
-
-			height:5vh;
-			background:$highlight;
-			border:solid $lowLight 2px;
-			text-align:center;
-			margin-bottom:3vh;
-			color:white;
-		}
-		section{
-			form{
-				section{
-					text-ailgn:left;
-					display:flex;
-					justify-content:space-around;
-					margin-bottom:3vh;
-					h3{
-						text-align:left;
-						width:8vw;
-						padding-left:2vw;
-					}
-					input{
-						border:solid black 1px;
-						height:3vh;
-						background-color:white;
-						line-height:1em;
-						border-top-right-radius:0.4vw;
-						border-top-left-radius:0.2vw;
-						border-bottom-right-radius:0.4vw;
-					}
-					#bigBox{
-						border-top-right-radius:0.4vw;
-						border-top-left-radius:0.2vw;
-						border-bottom-right-radius:0.4vw;
-						border:solid black 1px;
-						height:14vh;
-					}
-				}
-				input{
-					border-radius:0.3vw;
-					border:solid black 1px;
-					float: right;
-					background-color: $highlight;
-					color:white;
-					margin-right:1vw;
-				}
-			}
-		}
-	}
-}
