--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,5 +1,19 @@
 @import url(reset.css);
 @import "https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto+Condensed";
+* {
+  box-sizing: border-box; }
+
+a, a:hover, a:visited {
+  text-decoration: none;
+  color: black; }
+
+html {
+  min-width: 198px; }
+
+body {
+  min-width: 198px;
+  background-color: #CDCDCD; }
+
 @media only screen and (max-width: 425px) and (min-width: 0px) {
   body header#mainHeader h1 {
     font-size: 1.4em; }
@@ -213,66 +227,6 @@
 #home #aboutMe article .content a p:hover {
   transform: scale(1.05); }
 
-* {
-  box-sizing: border-box; }
-
-a, a:hover, a:visited {
-  color: black;
-  text-decoration: none; }
-
-html {
-  min-width: 198px; }
-
-body {
-  min-width: 198px;
-  background-color: #CDCDCD; }
-
-header#mainHeader {
-  width: 100vw;
-  height: 30vh;
-  background: #999999;
-  margin-bottom: 5vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-  header#mainHeader h1 {
-    font-family: 'Amatic SC', cursive;
-    color: white;
-    height: 25vh;
-    line-height: 25vh;
-    font-size: 2.5em;
-    width: 100vw;
-    text-align: center;
-    text-shadow: -2px 2px 1px rgba(1, 1, 1, 0.28); }
-  header#mainHeader nav#mainNav {
-    font-family: 'Titillium Web', sans-serif;
-    width: 100vw;
-    height: 5vh;
-    padding-bottom: 1vh;
-    border-bottom: 2px solid #3B3A3A; }
-    header#mainHeader nav#mainNav ul {
-      margin: 0 auto;
-      height: 5vh;
-      width: 90vw;
-      display: flex;
-      justify-content: space-around; }
-      header#mainHeader nav#mainNav ul li {
-        text-align: center;
-        font-size: .9em;
-        line-height: 5vh;
-        transition: all 140ms ease-in-out; }
-        header#mainHeader nav#mainNav ul li a, header#mainHeader nav#mainNav ul li a:visited {
-          color: white;
-          text-decoration: none;
-          padding-bottom: 1.3vh;
-          padding: 1.3vh 2vw;
-          transition: all 0.222s ease-in-out; }
-      header#mainHeader nav#mainNav ul a.active {
-        background-color: #3B3A3A;
-        border: solid rgba(1, 1, 1, 0.28) 1px;
-        border-bottom: none;
-        border-top-right-radius: 1vw; }
-
 ui-view {
   width: 100vw; }
   ui-view #home {
@@ -281,76 +235,122 @@ ui-view {
       display: flex;
       flex-direction: column-reverse; }
     ui-view #home .post header {
+      margin-bottom: 3vh;
       text-align: center;
-      font-family: 'Open Sans Condensed', sans-serif;
-      margin-bottom: 3vh; }
+      font-family: 'Open Sans Condensed', sans-serif; }
       ui-view #home .post header h1 {
-        font-family: 'Roboto Condensed', sans-serif;
-        margin-bottom: 1vh; }
+        margin-bottom: 1vh;
+        font-family: 'Roboto Condensed', sans-serif; }
     ui-view #home .post img {
-      border-radius: 2vw;
-      border-bottom-left-radius: 0px;
-      box-shadow: -0.2vw 0.2vw 0.2vw rgba(26, 26, 26, 0.47);
       border: 1px rgba(1, 1, 1, 0.28) solid;
       border-bottom: none;
-      border-left: none; }
+      border-left: none;
+      border-radius: 2vw;
+      border-bottom-left-radius: 0px;
+      box-shadow: -0.2vw 0.2vw 0.2vw rgba(26, 26, 26, 0.47); }
     ui-view #home .post article {
+      margin-bottom: 10vh;
       padding: 3vh 0;
-      border-bottom: 2px black solid;
-      margin-bottom: 10vh; }
+      border-bottom: 2px black solid; }
       ui-view #home .post article p {
         font-family: 'Sintony', sans-serif; }
     ui-view #home #aboutMe header {
-      cursor: pointer;
       margin-bottom: 3vh;
       padding: 2vh 0;
+      cursor: pointer;
       border: solid 3px #3B3A3A;
       font-family: 'Roboto Condensed', sans-serif; }
     ui-view #home #aboutMe img {
-      border-radius: 100%;
-      margin-bottom: 3vh; }
+      margin-bottom: 3vh;
+      border-radius: 100%; }
     ui-view #home #aboutMe article a, ui-view #home #aboutMe article a:visited {
-      corsor: pointer;
-      color: black; }
+      color: black;
+      corsor: pointer; }
       ui-view #home #aboutMe article a p, ui-view #home #aboutMe article a:visited p {
         margin: 0 auto;
-        border: 1px #3B3A3A solid;
-        padding: 0.3vw; }
+        padding: 0.3vw;
+        border: 1px #3B3A3A solid; }
     ui-view #home #aboutMe article p {
       font-family: helvetica; }
+
+header#mainHeader {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 30vh;
+  margin-bottom: 5vh;
+  background: #999999;
+  align-items: center; }
+  header#mainHeader h1 {
+    width: 100vw;
+    height: 25vh;
+    text-align: center;
+    color: white;
+    text-shadow: -2px 2px 1px rgba(1, 1, 1, 0.28);
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.5em;
+    line-height: 25vh; }
+  header#mainHeader nav#mainNav {
+    width: 100vw;
+    height: 5vh;
+    padding-bottom: 1vh;
+    border-bottom: 2px solid #3B3A3A;
+    font-family: 'Titillium Web', sans-serif; }
+    header#mainHeader nav#mainNav ul {
+      display: flex;
+      width: 90vw;
+      height: 5vh;
+      margin: 0 auto;
+      justify-content: space-around; }
+      header#mainHeader nav#mainNav ul li {
+        transition: all 140ms ease-in-out;
+        text-align: center;
+        font-size: .9em;
+        line-height: 5vh; }
+        header#mainHeader nav#mainNav ul li a, header#mainHeader nav#mainNav ul li a:visited {
+          padding: 1.3vh 2vw;
+          padding-bottom: 1.3vh;
+          transition: all 0.222s ease-in-out;
+          text-decoration: none;
+          color: white; }
+      header#mainHeader nav#mainNav ul a.active {
+        border: solid rgba(1, 1, 1, 0.28) 1px;
+        border-bottom: none;
+        border-top-right-radius: 1vw;
+        background-color: #3B3A3A; }
 
 #contactPage {
   display: flex;
   justify-content: space-around; }
   #contactPage #deets {
     position: relative;
-    background-color: #dfdbdb;
-    border-top-right-radius: 0.3vw;
     border-top-left-radius: 0.3vw;
+    border-top-right-radius: 0.3vw;
     border-bottom-right-radius: 0.2vw;
+    background-color: #dfdbdb;
     box-shadow: 0.2vw 0.2vw 0.25vw rgba(26, 26, 26, 0.47); }
     #contactPage #deets .bar {
       position: absolute;
       bottom: -5vh;
+      clear: both;
       height: 1vh;
-      background: rgba(26, 26, 26, 0.47);
-      clear: both; }
+      background: rgba(26, 26, 26, 0.47); }
     #contactPage #deets header {
       display: flex;
-      align-items: center;
-      justify-content: space-around;
       height: 5vh;
-      background: #3B3A3A;
-      border: solid rgba(1, 1, 1, 0.28) 2px;
-      text-align: center;
       margin-bottom: 3vh;
+      text-align: center;
       color: white;
+      border: solid rgba(1, 1, 1, 0.28) 2px;
+      border-top-left-radius: 0.3vw;
       border-top-right-radius: 0.3vw;
-      border-top-left-radius: 0.3vw; }
+      background: #3B3A3A;
+      align-items: center;
+      justify-content: space-around; }
     #contactPage #deets section ul {
-      margin: 0 auto;
       display: flex;
       flex-direction: column;
+      margin: 0 auto;
       justify-content: space-around; }
       #contactPage #deets section ul li {
         margin-bottom: 3vh; }
@@ -361,58 +361,59 @@ ui-view {
         #contactPage #deets section ul li h2 {
           padding-left: 0.5vw; }
   #contactPage #message {
-    box-shadow: 0.2vw 0.2vw 0.25vw rgba(26, 26, 26, 0.47);
-    border-top-right-radius: 0.3vw;
+    position: relative;
     border-top-left-radius: 0.3vw;
+    border-top-right-radius: 0.3vw;
     background-color: #dfdbdb;
-    position: relative; }
+    box-shadow: 0.2vw 0.2vw 0.25vw rgba(26, 26, 26, 0.47); }
     #contactPage #message .bar {
       position: absolute;
       bottom: -5vh;
+      clear: both;
       height: 1vh;
-      background: rgba(26, 26, 26, 0.47);
-      clear: both; }
+      background: rgba(26, 26, 26, 0.47); }
     #contactPage #message header {
-      border-top-right-radius: 0.3vw;
-      border-top-left-radius: 0.3vw;
       display: flex;
-      align-items: center;
-      justify-content: space-around;
       height: 5vh;
-      background: #3B3A3A;
-      border: solid rgba(1, 1, 1, 0.28) 2px;
-      text-align: center;
       margin-bottom: 3vh;
-      color: white; }
-    #contactPage #message section form section {
-      text-ailgn: left;
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 3vh; }
-      #contactPage #message section form section h3 {
-        text-align: left;
-        width: 8vw;
-        padding-left: 2vw; }
-      #contactPage #message section form section input {
-        border: solid black 1px;
-        height: 3vh;
-        background-color: white;
-        line-height: 1em;
-        border-top-right-radius: 0.4vw;
-        border-top-left-radius: 0.2vw;
-        border-bottom-right-radius: 0.4vw; }
-      #contactPage #message section form section #bigBox {
-        border-top-right-radius: 0.4vw;
-        border-top-left-radius: 0.2vw;
-        border-bottom-right-radius: 0.4vw;
-        border: solid black 1px;
-        height: 14vh; }
-    #contactPage #message section form input {
-      border-radius: 0.3vw;
-      border: solid black 1px;
-      float: right;
-      background-color: #3B3A3A;
+      text-align: center;
       color: white;
-      margin-right: 1vw; }
+      border: solid rgba(1, 1, 1, 0.28) 2px;
+      border-top-left-radius: 0.3vw;
+      border-top-right-radius: 0.3vw;
+      background: #3B3A3A;
+      align-items: center;
+      justify-content: space-around; }
+    #contactPage #message section form section {
+      display: flex;
+      margin-bottom: 3vh;
+      text-ailgn: left;
+      justify-content: space-around; }
+      #contactPage #message section form section h3 {
+        width: 8vw;
+        padding-left: 2vw;
+        text-align: left; }
+      #contactPage #message section form section input {
+        height: 3vh;
+        color: black;
+        border: solid black 1px;
+        border-top-left-radius: 0.2vw;
+        border-top-right-radius: 0.4vw;
+        border-bottom-right-radius: 0.4vw;
+        background-color: white;
+        line-height: 1em; }
+      #contactPage #message section form section #bigBox {
+        height: 14vh;
+        border: solid black 1px;
+        border-top-left-radius: 0.2vw;
+        border-top-right-radius: 0.4vw;
+        border-bottom-right-radius: 0.4vw; }
+    #contactPage #message section form input {
+      float: right;
+      margin-right: 1vw;
+      color: white;
+      border: solid black 1px;
+      border-radius: 0.3vw;
+      background-color: #3B3A3A; }
 
 /*# sourceMappingURL=master.css.map */
