--- a/public/index.pug
+++ b/public/index.pug
@@ -6,7 +6,7 @@ html(lang='en', ng-app="app")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		link(rel='stylesheet', href='./css/master.css')
 		link(href="https://fonts.googleapis.com/css?family=Bungee+Outline", rel="stylesheet")
-		<link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web" rel="stylesheet">
+		link(href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web", rel="stylesheet")
 	body(ng-controller="ctrl")
 		header#mainHeader
 			h1 Climbing the Mountai
@@ -30,8 +30,6 @@ html(lang='en', ng-app="app")
 		ui-view
 
 
-
-
 		// Angular Cdn
 		script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js")
 		// Ui-router Cdn
@@ -39,6 +37,8 @@ html(lang='en', ng-app="app")
 
 		// jquery Cdn
 		script(src="http://code.jquery.com/jquery-3.1.0.min.js")
+		//jquery-form-validator
+		script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js")
 		// Angular files
 		script(type="text/javascript", src="./js/angular/app.js")
 		script(type="text/javascript", src="./js/angular/ctrl.js")
